updated CSS of lookup.html as well as made sure that additional treatments are not appended at the end. Still need to fix the graph overlapping

--- a/cancerPrognosis/progApp/static/progApp/lookup.css
+++ b/cancerPrognosis/progApp/static/progApp/lookup.css
@@ -14,6 +14,10 @@ ul {
 	text-align: center;
 }
 
+#chart-label, #treatment-label {
+	text-align: center;
+}
+
 .field-heading{
 	display:inline;
 	font-weight:bold;
@@ -24,5 +28,9 @@ ul {
 }
 
 #print-buttons-container {
+	text-align: center;
+}
+
+.text {
 	text-align: center;
 }
